ghc-6.2/hslibs/win32/Win32Menu_stub_ffi.h

extern void* prim_trackPopupMenuEx(HMENU arg1,UINT arg2,int arg3,int arg4,HWND arg5,LPRECT arg6);
extern int access_prim_trackPopupMenuEx_gc_failed(HsPtr);
extern void* access_prim_trackPopupMenuEx_gc_failstring(HsPtr);
extern void* prim_appendMenu(HMENU arg1,UINT arg2,UINT arg3,char * arg4);
extern int access_prim_appendMenu_gc_failed(HsPtr);
extern void* access_prim_appendMenu_gc_failstring(HsPtr);
extern void* prim_insertMenu(HMENU arg1,UINT arg2,UINT arg3,UINT arg4,char * arg5);
extern int access_prim_insertMenu_gc_failed(HsPtr);
extern void* access_prim_insertMenu_gc_failstring(HsPtr);
extern void* prim_modifyMenu(HMENU arg1,UINT arg2,UINT arg3,UINT arg4,char * arg5);
extern int access_prim_modifyMenu_gc_failed(HsPtr);
extern void* access_prim_modifyMenu_gc_failstring(HsPtr);
extern void* prim_removeMenu(HMENU arg1,UINT arg2,UINT arg3);
extern int access_prim_removeMenu_gc_failed(HsPtr);
extern void* access_prim_removeMenu_gc_failstring(HsPtr);