ghc-6.2/hslibs/win32/Win32Menu.hs


trackPopupMenuEx :: HMENU -> TrackMenuFlag -> Int -> Int -> HWND -> MbLPRECT -> IO ()
trackPopupMenuEx arg1 arg2 arg3 arg4 arg5 arg6 =
  (case arg6 of {
      Nothing -> (return (nullAddr));
      (Just arg6) -> (return ((arg6)))
   }) >>= \ (arg6) ->
  prim_trackPopupMenuEx arg1 arg2 arg3 arg4 arg5 arg6
  >>= \ gc_result ->
  access_prim_trackPopupMenuEx_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_trackPopupMenuEx_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_trackPopupMenuEx" prim_trackPopupMenuEx :: Addr -> Word32 -> Int -> Int -> Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_trackPopupMenuEx_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_trackPopupMenuEx_gc_failstring :: Addr -> IO (Addr)



appendMenu :: HMENU -> MenuFlag -> MenuID -> String -> IO ()
appendMenu arg1 arg2 arg3 gc_arg1 =
  (marshall_string_ gc_arg1) >>= \ (arg4) ->
  prim_appendMenu arg1 arg2 arg3 arg4
  >>= \ gc_result ->
  access_prim_appendMenu_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_appendMenu_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_appendMenu" prim_appendMenu :: Addr -> Word32 -> Word32 -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_appendMenu_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_appendMenu_gc_failstring :: Addr -> IO (Addr)

insertMenu :: HMENU -> MenuItem -> MenuFlag -> MenuID -> String -> IO ()
insertMenu arg1 arg2 arg3 arg4 gc_arg1 =
  (marshall_string_ gc_arg1) >>= \ (arg5) ->
  prim_insertMenu arg1 arg2 arg3 arg4 arg5
  >>= \ gc_result ->
  access_prim_insertMenu_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_insertMenu_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_insertMenu" prim_insertMenu :: Addr -> Word32 -> Word32 -> Word32 -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_insertMenu_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_insertMenu_gc_failstring :: Addr -> IO (Addr)

modifyMenu :: HMENU -> MenuItem -> MenuFlag -> MenuID -> String -> IO ()
modifyMenu arg1 arg2 arg3 arg4 gc_arg1 =
  (marshall_string_ gc_arg1) >>= \ (arg5) ->
  prim_modifyMenu arg1 arg2 arg3 arg4 arg5
  >>= \ gc_result ->
  access_prim_modifyMenu_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_modifyMenu_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_modifyMenu" prim_modifyMenu :: Addr -> Word32 -> Word32 -> Word32 -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_modifyMenu_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_modifyMenu_gc_failstring :: Addr -> IO (Addr)

removeMenu :: HMENU -> MenuItem -> MenuFlag -> IO ()
removeMenu arg1 arg2 arg3 =
  prim_removeMenu arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_removeMenu_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_removeMenu_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Menu_stub_ffi.h prim_removeMenu" prim_removeMenu :: Addr -> Word32 -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_removeMenu_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Menu_stub_ffi.h" access_prim_removeMenu_gc_failstring :: Addr -> IO (Addr)


----------------------------------------------------------------
-- End
----------------------------------------------------------------
